# lutra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  TODO.md  build.rs  default.nix  example.lt  flake.nix  justfile  repro.lt  rust-toolchain.toml
example/: Cargo.toml  build.rs
example/src/: main.rs  schema.lt
examples/rust-interpreter/: Cargo.toml  build.rs
examples/rust-interpreter/src/: main.lt  main.rs
examples/rust-postgres/: Cargo.toml  build.rs  init.sql
examples/rust-postgres/src/: main.lt  main.rs
lutra-arrow/: Cargo.toml
lutra-arrow/benches/: to_arrow_criterion.rs
lutra-arrow/src/: context.rs  interface.rs  lib.rs  schema.rs  to_arrow.rs  to_lutra.rs  validate.rs
lutra-bin/: Cargo.toml  README.md
lutra-bin/python/: .gitignore  Cargo.toml  justfile  pyproject.toml
lutra-bin/python/lutra_bin/: __init__.py  __init__.pyi  ir.pyi  sr.pyi
lutra-bin/python/src/: lib.rs  value.rs
lutra-bin/python/tests/: .gitignore  main.py  types.lt
lutra-bin/src/: br.rs  data.rs  decode.rs  encode.rs  error.rs  ident.rs  ir.rs  layout.rs  lib.rs  printer.rs  reader.rs  rr.rs  shape.rs  sr.rs  std_types.rs  tabular.rs  typed_data.rs  value.rs  visitor.rs
lutra-bin/src/ir/: generated.rs  ir.lt  literal.rs  mod.rs  printer.rs  sid.rs
lutra-bin/src/project/: Project.lt  br.lt  generated.rs  ir.lt  module.lt  sr.lt
lutra-bin/src/table/: format.rs  iterate.rs  layout.rs  mod.rs  render.rs
lutra-bin/src/value/: decode.rs  encode.rs  fold.rs  mod.rs  print_pretty.rs  print_source.rs  test.rs
lutra-bin/src/writer/: array.rs  enum_.rs  mod.rs  test.rs  tuple.rs
lutra-cli/: Cargo.toml
lutra-cli/src/: cli.rs  io.rs  language_server.rs  runners.rs  schema.rs
lutra-codegen/: Cargo.toml
lutra-codegen/src/: codegen.rs  codegen_encode.rs  codegen_fn.rs  codegen_program.rs  codegen_ty.rs  lib.rs  main.rs
lutra-codegen/src/python/: mod.rs
lutra-codegen/src/rust/: client.rs  encode.rs  functions.rs  mod.rs  program.rs  types.rs
lutra-codegen/src/sql/: mod.rs
lutra-compiler/: Cargo.toml
lutra-compiler/benches/: compile_criterion.rs  compiler.rs
lutra-compiler/case_studies/: dept.sql
lutra-compiler/src/: bytecoding.rs  check.rs  compile.rs  decl.rs  diagnostic.rs  discover.rs  error.rs  format.rs  lib.rs  lowering.rs  project.rs  span.rs  std.lt
lutra-compiler/src/codespan/: edit.rs  line_numbers.rs  mod.rs  span.rs
lutra-compiler/src/parser/: def.rs  expr.rs  helpers.rs  interpolation.rs  lexer.rs  mod.rs  perror.rs  stmt.rs  test.rs  types.rs
lutra-compiler/src/pr/: def.rs  expr.rs  literal.rs  mod.rs  ops.rs  path.rs  types.rs  utils.rs
lutra-compiler/src/printer/: common.rs  defs.rs  expr.rs  mod.rs  test.rs  types.rs
lutra-compiler/src/project/: analysis.rs  mod.rs  source_tree.rs
lutra-compiler/src/resolver/: const_eval.rs  desugar.rs  mod.rs  module.rs  prefixer.rs  recursive.rs  std.lt
lutra-compiler/src/semantic/: module.rs
lutra-compiler/src/sql/: clauses.rs  cr.rs  mod.rs  optimizer.rs  pg_repr.rs  queries.rs  serialization.rs  types.rs
lutra-compiler/src/utils/: fold.rs  id_gen.rs  mod.rs  toposort.rs  types.rs
lutra-compiler/tests/project1/: Project.lt
lutra-db-driver/: Cargo.toml
lutra-db-driver/src/: lib.rs  params.rs  repack.rs  result.rs  schema.rs
lutra-frontend/: Cargo.toml  todo.md
lutra-frontend/src/: bytecoding.rs  cli.rs  compile.rs  decl.rs  diagnostic.rs  discover.rs  error.rs  lib.rs  lowering.rs  project.rs  span.rs
lutra-frontend/src/ir/: decl.rs  fold.rs  mod.rs
lutra-frontend/src/parser/: expr.rs  interpolation.rs  lexer.rs  mod.rs  perror.rs  stmt.rs  test.rs  types.rs
lutra-frontend/src/pr/: expr.rs  literal.rs  mod.rs  ops.rs  path.rs  stmt.rs  types.rs  utils.rs
lutra-frontend/src/printer/: mod.rs
lutra-frontend/src/semantic/: ast_expand.rs  desugar.rs  mod.rs  module.rs  (+2 more)
lutra-input-tui/: Cargo.toml
lutra-input-tui/src/: app.rs  form.rs  lib.rs  main.rs
lutra-interpreter/: Cargo.toml
lutra-interpreter/src/: arrow.rs  data.rs  interpreter.rs  lib.rs  native.rs  test.rs
lutra-ir/: Cargo.toml  build.rs
lutra-ir/src/: ir.lt  lib.rs  literal.rs  sid.rs  test.rs
lutra-parser/: Cargo.toml
lutra-parser/src/: error.rs  generic.rs  lib.rs  span.rs  test.rs
lutra-project-tools/: Cargo.toml
lutra-project-tools/src/: docs.rs  lib.rs
lutra-protocol/: Cargo.toml
lutra-protocol/src/: client.rs  http.rs  lib.rs  main.rs  messages.lt  server.rs
lutra-rpc-embedded/: Cargo.toml  build.rs
lutra-rpc-embedded/src/: client.rs  lib.rs  messages.lt
lutra-runner/: Cargo.toml  build.rs
lutra-runner-duckdb/: Cargo.toml  README.md  build.rs
lutra-runner-duckdb/src/: case.rs  introspection.lt  lib.rs  params.rs  result.rs  schema.rs
lutra-runner-postgres/: Cargo.toml  build.rs
lutra-runner-postgres/lutra/: main.lt  module.lt
lutra-runner-postgres/python/: .gitignore  Cargo.toml  justfile  pyproject.toml
lutra-runner-postgres/src/: case.rs  lib.rs  params.rs  result.rs  schema.rs
lutra-runner/src/: async.rs  lib.rs  sync.rs
lutra-runtime/: Cargo.toml  build.rs
lutra-runtime/src/: arrow.rs  cli.rs  interpreter.rs  lib.rs  literal.rs  main.rs  native.rs  test.rs
lutra-sql/: Cargo.toml  README.md
lutra-sql/src/: dml.rs  lib.rs  query.rs  string.rs
lutra-tui/: Cargo.toml
lutra-tui/examples/: explore.rs  input.rs
lutra-tui/src/: cell.rs  commands.rs  completions.rs  describe.rs  driver.rs  editor.rs  explore.rs  export.rs  input.rs  inspect.rs  interactive.rs  keybindings.rs  layout.rs  lib.rs  printer.rs  project.rs  renderer.rs  repl.rs  runner.rs  shell.rs  style.rs  terminal.rs  tests.rs  utils.rs  watcher.rs
lutra-typed-data/: Cargo.toml  build.rs
lutra-typed-data/src/: lib.rs  schema.lt
tests/: Cargo.toml  build.rs
tests/lutra/: Project.lt  bin.lt  runtime.lt
tests/src/: arrow.rs  bin.lt  bin.rs  client.rs  duckdb.rs  e2e.rs  externals.rs  func.rs  fuzz.rs  inliner.rs  interpreter.rs  lbin.rs  lib.rs  lowerer.rs  lowering.rs  native_functions.rs  postgres.rs  resolver.rs  runner.rs  runtime.rs  sql.rs  table.rs  typed_data.rs  types.rs
(+318 files in other folders)
