[workspace]
members = [
    "tests",
    "lutra-bin",
    "lutra-bin/python",
    "lutra-cli",
    "lutra-codegen",
    "lutra-compiler",
    "lutra-db-driver",
    "lutra-ir",
    "lutra-protocol",
    "lutra-rpc-embedded",
    "lutra-interpreter",
    "lutra-typed-data",
    "lutra-tui",
]
exclude = ["examples"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT or Apache 2.0"
repository = "https://code.murerzen.eu/lutra-data"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
itertools = "0.13.0"
log = "0.4.22"
thiserror = { version = "2", default-features = false }
anyhow = "1"
bytes = { version = "1", default-features = false }
chumsky = "0.9.2"
env_logger = "0.11.5"
insta = "1.40.0"
pretty-hex = "0.4.1"
enum-as-inner = "0.6.1"
indexmap = "2.6.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
