[workspace]
members = [
    "lutra-bin",
    "lutra-bin/python",
    "lutra-cli",
    "lutra-codegen",
    "lutra-compiler",
    "lutra-interpreter",
    "lutra-ir",
    "lutra-tui",
    "lutra-typed-data",
    "tests",
    "lutra-runner",
    "lutra-runner-postgres",
    "lutra-runner-postgres/python",
    "sql-ast",
]
exclude = ["examples"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT or Apache 2.0"
repository = "https://code.murerzen.eu/lutra-data"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
itertools = "0.13.0"
log = "0.4.22"
thiserror = { version = "2", default-features = false }
anyhow = "1"
bytes = { version = "1", default-features = false }
chumsky = "0.9.2"
env_logger = "0.11.5"
insta = "1.40.0"
pretty-hex = "0.4.1"
enum-as-inner = "0.6.1"
indexmap = "2.6.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
tokio = "1.42.0"

lutra-bin = { version = "0.1", registry = "codeberg-org", path = "lutra-bin", default-features = false }
lutra-bin-python = { version = "0.1", registry = "codeberg-org", path = "lutra-bin/python" }
lutra-cli = { version = "0.1", registry = "codeberg-org", path = "lutra-cli" }
lutra-codegen = { version = "0.1", registry = "codeberg-org", path = "lutra-codegen" }
lutra-compiler = { version = "0.1", registry = "codeberg-org", path = "lutra-compiler" }
lutra-interpreter = { version = "0.1", registry = "codeberg-org", path = "lutra-interpreter" }
lutra-ir = { version = "0.1", registry = "codeberg-org", path = "lutra-ir" }
lutra-tui = { version = "0.1", registry = "codeberg-org", path = "lutra-tui" }
lutra-typed-data = { version = "0.1", registry = "codeberg-org", path = "lutra-typed-data" }
tests = { version = "0.1", registry = "codeberg-org", path = "tests" }
lutra-runner = { version = "0.1", registry = "codeberg-org", path = "lutra-runner" }
lutra-runner-postgres = { version = "0.1", registry = "codeberg-org", path = "lutra-runner-postgres", default-features = false }
lutra-runner-postgres-python = { version = "0.1", registry = "codeberg-org", path = "lutra-runner-postgres/python", default-features = false }
sql-ast = { version = "0.1", registry = "codeberg-org", path = "sql-ast" }
