[workspace]
members = [
    "lutra-bin",
    "lutra-bin/python",
    "lutra-sql",
    "lutra-compiler",
    "lutra-codegen",
    "lutra-runner",
    "lutra-runner-postgres",
    "lutra-runner-postgres/python",
    "lutra-arrow",
    "lutra-runner-duckdb",
    "lutra-interpreter",
    "lutra-tui",
    "lutra-cli",
    "lutra-ir",
    "tests",
]
exclude = ["examples"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://codeberg.org/lutra/lutra/"
rust-version = "1.91"
version = "0.5.0"

[workspace.dependencies]
itertools = "0.13.0"
log = "0.4.22"
thiserror = { version = "2", default-features = false }
anyhow = "1"
bytes = { version = "1", default-features = false }
chumsky = "0.9.2"
env_logger = "0.11.5"
insta = "1.40.0"
pretty-hex = "0.4.1"
enum-as-inner = "0.6.1"
indexmap = "2.6.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
tokio = "1.42.0"
strum = { version = "0.26.3", features = ["std", "derive"] }
chrono = { version = "0.4.42", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
arrow = "56.2.0"
parquet = "56.2.0"

lutra-arrow = { version = "0.5", path = "lutra-arrow" }
lutra-bin = { version = "0.5", path = "lutra-bin", default-features = false }
lutra-bin-python = { version = "0.5", path = "lutra-bin/python" }
lutra-cli = { version = "0.5", path = "lutra-cli" }
lutra-codegen = { version = "0.5", path = "lutra-codegen" }
lutra-compiler = { version = "0.5", path = "lutra-compiler" }
lutra-interpreter = { version = "0.5", path = "lutra-interpreter" }
lutra-ir = { version = "0.5", path = "lutra-ir" }
lutra-runner = { version = "0.5", path = "lutra-runner" }
lutra-runner-duckdb = { version = "0.5", path = "lutra-runner-duckdb" }
lutra-runner-postgres = { version = "0.5", path = "lutra-runner-postgres", default-features = false }
lutra-runner-postgres-python = { version = "0.5", path = "lutra-runner-postgres/python", default-features = false }
lutra-sql = { version = "0.5", path = "lutra-sql" }
lutra-tui = { version = "0.5", path = "lutra-tui" }
tests = { version = "0.5", path = "tests" }
