[package]
name = "example"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-parser = { path = "../lutra-parser" }
lutra-bin = { path = "../lutra-bin" }

[build-dependencies]
lutra-codegen = { path = "../lutra-codegen" }
