[package]
name = "example"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-bin = { path = "../lutra-bin" }
lutra-typed-data = { path = "../lutra-typed-data" }
lutra-frontend = { path = "../lutra-frontend" }

[build-dependencies]
lutra-codegen = { path = "../lutra-codegen" }
