[package]
name = "lutra-arrow"
description = "Arrow format conversion for Lutra: converting between Arrow RecordBatch and Lutra binary values"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = {workspace = true}
parquet = {workspace = true}
thiserror = {workspace = true}
lutra-bin = {workspace = true}