[package]
name = "lutra-bin"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["std", "chrono"]
std = ["thiserror/std", "tabular", "bytes/std", "chrono/std"]
chrono = ["dep:chrono"]

[dependencies]
bytes = { workspace = true }
tabular = { version = "0.2.0", optional = true }
thiserror = { workspace = true }
enum-as-inner = { workspace = true }
chrono = { workspace = true, optional = true }
