[package]
name = "lutra-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "lutra"
path = "src/cli.rs"
bench = false
test = false

[dependencies]
lutra-bin = { path = "../lutra-bin" }
lutra-compiler = { path = "../lutra-compiler", features = ["clap"] }
lutra-interpreter = { path = "../lutra-interpreter" }
lutra-codegen = { path = "../lutra-codegen" }

tracing = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
lutra-runner = { version = "0.1.0", path = "../lutra-runner" }
lutra-runner-postgres = { version = "0.1.0", path = "../lutra-runner-postgres" }
postgres = "0.19.10"
sqlformat = "0.3.5"
tokio = {workspace = true, features = ["rt", "macros"]}
