[package]
name = "lutra-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "lutra"
path = "src/cli.rs"
bench = false
test = false

[dependencies]
lutra-bin = { workspace = true }
lutra-compiler = { workspace = true, features = ["clap", "debug"] }
lutra-interpreter = { workspace = true }
lutra-codegen = { workspace = true }
lutra-runner = { workspace = true }
lutra-runner-postgres = { workspace = true, features = ["tokio-postgres"]}

tracing = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-postgres = "0.7.13"
tokio = {workspace = true, features = ["rt", "macros", "fs"]}
