[package]
name = "lutra-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "lutra"
path = "src/cli.rs"
bench = false
test = false

[dependencies]
lutra-bin = { workspace = true }
lutra-compiler = { workspace = true, features = ["clap"] }
lutra-interpreter = { workspace = true }
lutra-codegen = { workspace = true }
lutra-runner = { workspace = true, features = ["async"] }
lutra-runner-postgres = { workspace = true, features = ["tokio-postgres"] }
lutra-runner-duckdb = { workspace = true }
lutra-tui = { workspace = true }

clap = { version = "4.4.18", features = ["derive"] }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }

tokio-postgres = "0.7.13"
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "fs",
    "io-std",
    "sync",
] }
strum = { workspace = true }
tower-lsp-server = "0.22.1"
codespan-lsp = "0.13.0"

lutra-arrow = { workspace = true }
parquet = { workspace = true, features = ["async"]}
