[package]
name = "lutra-codegen"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
bytes = { workspace = true }
lutra-compiler = { workspace = true }
lutra-bin = { workspace = true, features = ["std"] }
sql-ast = { workspace = true } # needed only for ident escape
base85 = "2.0.0"
tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
