[package]
name = "lutra-codegen"
description = "Code generation for Lutra"
version = "0.6.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[features]
clap = ["dep:clap"]

[dependencies]
bytes = { workspace = true }
lutra-compiler = { workspace = true }
lutra-bin = { workspace = true, features = ["std"] }
lutra-sql = { workspace = true } # needed only for ident escape
base85 = "2.0.0"
tracing = { workspace = true }
clap = { version = "4.4.18", features = ["derive"], optional = true }
# tracing-subscriber = { workspace = true }
