[package]
name = "lutra-compiler"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
debug = ["sqlformat"]

[lib]
bench = false
doctest = false

[dependencies]
thiserror = { workspace = true, default-features = true }
itertools = { workspace = true }
tracing = { workspace = true }
ariadne = "0.4.1"

# discover
walkdir = "2.5.0"

# parser
semver = { version = "1.0.23", features = ["serde"] }
chumsky = { workspace = true }

# sql backend
sql-ast = { path = "../sql-ast" }
regex = "1.11.1"

enum-as-inner = { workspace = true }
strum = { version = "0.26.3", features = ["std", "derive"] }
indexmap = { workspace = true }

lutra-bin = { path = "../lutra-bin" }

# cli
clap = { version = "4.4.18", features = ["derive"], optional = true }
sqlformat = { version = "0.3.5", optional = true }
append-only-vec = "0.1.7"

[dev-dependencies]
insta = { workspace = true }
