[package]
name = "lutra-compiler"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
debug = ["sqlformat"]

[lib]
bench = false
doctest = false

[dependencies]
# discover
walkdir = "2.5.0"

# parser
chumsky = { workspace = true }

# sql backend
sql-ast = { workspace = true }
regex = "1.11.1"

# cli
clap = { version = "4.4.18", features = ["derive"], optional = true }
sqlformat = { version = "0.3.5", optional = true }

thiserror = { workspace = true, default-features = true }
itertools = { workspace = true }
tracing = { workspace = true }
ariadne = "0.4.1"
enum-as-inner = { workspace = true }
strum = { version = "0.26.3", features = ["std", "derive"] }
indexmap = { workspace = true }
append-only-vec = "0.1.7"
lutra-bin = { workspace = true, features = ["std"] }
chrono = { workspace = true }


[dev-dependencies]
insta = { workspace = true }
