[package]
name = "lutra-frontend"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
cli = ["clap", "env_logger", "anyhow"]
default = ["cli"]

[lib]
bench = false
doctest = false

[[bin]]
bench = false
name = "lutra"
path = "src/cli.rs"
required-features = ["cli"]
test = false

[dependencies]
thiserror = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
walkdir = "2.5.0"

semver = { version = "1.0.23", features = ["serde"] }
chumsky = "0.9.2"
enum-as-inner = "0.6.1"
strum = { version = "0.26.3", features = ["std", "derive"] }
regex = "1.11.1"
indexmap = "2.6.0"

clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { version = "0.10.2", optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }
