[package]
name = "lutra-frontend"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
cli = ["clap", "env_logger", "anyhow"]
default = ["cli"]

[lib]
bench = false
doctest = false

[[bin]]
bench = false
name = "lutra"
path = "src/cli.rs"
required-features = ["cli"]
test = false

[dependencies]
thiserror = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
ariadne = "0.4.1"

# discover
walkdir = "2.5.0"

# parser
semver = { version = "1.0.23", features = ["serde"] }
chumsky = { workspace = true }

enum-as-inner = { workspace = true }
strum = { version = "0.26.3", features = ["std", "derive"] }
indexmap = "2.6.0"

# cli
clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
