[package]
name = "lutra-frontend"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

[lib]
bench = false
doctest = false

[dependencies]
thiserror = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
ariadne = "0.4.1"

# discover
walkdir = "2.5.0"

# parser
semver = { version = "1.0.23", features = ["serde"] }
chumsky = { workspace = true }

enum-as-inner = { workspace = true }
strum = { version = "0.26.3", features = ["std", "derive"] }
indexmap = { workspace = true }

lutra-bin = { path = "../lutra-bin" }

# cli
clap = { version = "4.4.18", features = ["derive"], optional = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
