[package]
name = "lutra-interpreter"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false

[dependencies]
arrow = "55.1.0"
lutra-bin = { path = "../lutra-bin" }
lutra-runner = { path = "../lutra-runner" }
parquet = { version = "55.1.0" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta = { workspace = true }
