[package]
name = "lutra-interpreter"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false

[dependencies]
arrow = "55.1.0"
lutra-bin = { workspace = true }
lutra-runner = { workspace = true }
parquet = { version = "55.1.0" }
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true

[dev-dependencies]
insta = { workspace = true }
