[package]
name = "lutra-interpreter"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false

[dependencies]
lutra-bin = { workspace = true }
lutra-runner = { workspace = true }

lutra-arrow = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
