[package]
name = "lutra-ir"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# parser
chumsky = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lutra-compiler = { path = "../lutra-compiler" }
lutra-bin = { path = "../lutra-bin" }

[dev-dependencies]
insta = { workspace = true }
