[package]
name = "lutra-ir"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.6.0"

[dependencies]
# parser
chumsky = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lutra-compiler = { workspace = true }
lutra-bin = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
