[package]
description = "A parser for the Lutra language."
name = "lutra-parser"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
enum-as-inner = "0.6.1"
itertools = { workspace = true }
log = { workspace = true }
semver = { version = "1.0.23", features = ["serde"] }
strum = { version = "0.26.3", features = ["std", "derive"] }
chumsky = "0.9.2"

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }
serde_json = "1.0.132"
