[package]
name = "lutra-protocol"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-bin = { path = "../lutra-bin" }
lutra-runtime = { path = "../lutra-runtime" }
lutra-compiler = { path = "../lutra-compiler" }

tokio = { version = "1.42.0", features = ["rt", "io-util", "macros", "sync"] }
log.workspace = true

hyper = { version = "1.5.2", features = ["http1", "server", "client"]}
hyper-util = { version = "0.1", features = ["tokio"]}
http-body-util = "0.1.2"

[build-dependencies]
lutra-codegen = { path = "../lutra-codegen" }
