[package]
name = "lutra-rpc-embedded"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
std = []

[dependencies]
embedded-io-async = "0.6.1"
lutra-bin = { path = "../lutra-bin", default-features = false }
log = { workspace = true }

[build-dependencies]
lutra-codegen = { path = "../lutra-codegen" }
