[package]
name = "lutra-runner-duckdb"
description = "DuckDB runner for Lutra"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
duckdb = "1.4"

bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tinyjson = "2"
lutra-bin = { workspace = true, features = ["std"] }
lutra-runner = { workspace = true, features = ["std"] }
lutra-arrow = { workspace = true }
arrow = { workspace = true }

[build-dependencies]
lutra-codegen = { workspace = true }

[dev-dependencies]

[features]
default = []
