[package]
name = "lutra-runner-postgres"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { version = "0.3.31", default-features = false }
tokio = { workspace = true }
lutra-bin = { version = "0.1.0", path = "../lutra-bin" }
lutra-runner = { version = "0.1.0", path = "../lutra-runner" }
tinyjson = "2"
postgres-types = { version = "0.2.9", default-features = false }
postgres-protocol = { version = "0.6.8", default-features = false }

tokio-postgres = { version = "0.7.13", default-features = false, optional = true }
postgres = { version = "0.19.10", default-features = false, optional = true }
regex = { version = "1.11.2", default-features = false }

[build-dependencies]
lutra-codegen = { version = "0.1.0", path = "../lutra-codegen" }

[features]
default = ["postgres", "tokio-postgres"]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres"]
