[package]
name = "lutra-runner"
description = "Runner abstraction for executing Lutra programs"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
std = ["lutra-bin/std"]
async = ["std"]
binary-tokio = ["tokio", "std"]
binary-embedded = ["embedded-io-async"]
channel = ["tokio", "tokio/rt", "std"]
sync = ["tokio", "tokio/rt", "tokio/rt-multi-thread", "std"]

[dependencies]
embedded-io-async = { version = "0.6.1", optional = true }
lutra-bin = { workspace = true, default-features = false }
tokio = { version = "1.46.1", features = ["io-util", "sync"], optional = true }
tracing.workspace = true

[build-dependencies]
lutra-codegen = { workspace = true }
