[package]
name = "lutra-runtime"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-bin = { path = "../lutra-bin" }
lutra-compiler = { path = "../lutra-compiler" }
lutra-ir = { path = "../lutra-ir" }

[dev-dependencies]
insta = { workspace = true }
