[package]
name = "lutra-runtime"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = "55.1.0"
lutra-bin = { path = "../lutra-bin" }
lutra-compiler = { path = "../lutra-compiler" }
lutra-ir = { path = "../lutra-ir" }
parquet = { version = "55.1.0" }
thiserror.workspace = true

[dev-dependencies]
insta = { workspace = true }
