[package]
name = "lutra-sql"
description = "SQL AST representation"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
log = "0.4"
once_cell = { version = "1", default-features = false, features = ["race", "alloc"] }
regex = "1.11.1"
