[package]
name = "lutra-tui"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
crossterm = "0.28.0"
ratatui = "0.30.0"
notify = "6.0"
notify-debouncer-mini = "0.4"
tokio = { workspace = true, features = ["rt"] }

lutra-compiler = { workspace = true }
lutra-bin = { workspace = true }
lutra-interpreter = { workspace = true }
lutra-runner = { workspace = true, features = ["channel", "sync"] }
lutra-runner-postgres = { workspace = true, features = ["tokio-postgres"] }
lutra-runner-duckdb = { workspace = true }
