[package]
name = "lutra-tui"
description = "Terminal UI components for Lutra: interactive project explorer and value input forms"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
crossterm = "0.28.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"
notify = "6.0"
notify-debouncer-mini = "0.4"
tokio = { workspace = true, features = ["rt"] }
chrono = { workspace = true }

lutra-compiler = { workspace = true }
lutra-bin = { workspace = true }
lutra-interpreter = { workspace = true }
lutra-project-tools = { workspace = true }
lutra-runner = { workspace = true, features = ["channel", "sync"] }
lutra-runner-postgres = { workspace = true, features = ["tokio-postgres"] }
lutra-runner-duckdb = { workspace = true }
