[package]
name = "lutra-typed-data"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-bin = { path = "../lutra-bin" }
lutra-parser = { path = "../lutra-parser" }

[build-dependencies]
lutra-codegen = { path = "../lutra-codegen" }
