[package]
name = "tests"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-bin = { path = "../lutra-bin" }
lutra-typed-data = { path = "../lutra-typed-data" }
lutra-compiler = { path = "../lutra-compiler" }
lutra-interpreter = { path = "../lutra-interpreter" }
lutra-ir = { path = "../lutra-ir" }
lutra-runner = { path = "../lutra-runner", features = ["std", "binary-tokio"] }
lutra-runner-postgres = { version = "0.1.0", path = "../lutra-runner-postgres" }
sqlformat = "0.3.5"
similar-asserts = "1.7.0"
console = "*"                                                                    # must match similar-asserts
libtest-mimic = "0.8.1"
tokio-postgres = "0.7.13"
rand = "0.9.2"
tqdm = "0.8.0"

[build-dependencies]
lutra-codegen = { path = "../lutra-codegen" }

[dev-dependencies]
insta = { workspace = true }
pretty-hex = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
name = "corpus"
path = "tests/corpus/main.rs"
harness = false
