[package]
name = "tests"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
lutra-arrow = { workspace = true }
lutra-bin = { workspace = true }
lutra-codegen = { workspace = true }
lutra-compiler = { workspace = true }
lutra-interpreter = { workspace = true }
lutra-ir = { workspace = true }
lutra-runner = { workspace = true, features = ["std", "binary-tokio", "async"] }
lutra-runner-duckdb = { workspace = true }
lutra-runner-postgres = { workspace = true, features = ["postgres", "tokio-postgres"] }
arrow = { workspace = true }
parquet = { workspace = true }
duckdb = "1.4"
sqlformat = "0.3.5"
similar-asserts = "1.7.0"
console = "*"                                                                    # must match similar-asserts
libtest-mimic = "0.8.1"
tokio-postgres = "0.7.13"
rand = "0.9.2"
tqdm = "0.8.0"
temp-dir = "=0.1.16"

[build-dependencies]
lutra-codegen = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
pretty-hex = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[[test]]
name = "corpus"
path = "tests/corpus/main.rs"
harness = false
